[package]
name = "scha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo_rust = "0.4.1"
csv = "1.3.0"
serde = { version = "1.0.200", features=["derive"] }
regex = "1.10.4"
nalgebra = "0.33.0"
itertools = "0.13.0"
proj = "0.27.2"
geo-booleanop = "0.3.2"
geo = "0.29.3"
image = "0.25.5"
rayon = "1.10.0"
